--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -868,7 +868,7 @@
     "noDocumentsFound": "No documents found"
   },
   "contact": {
-    "email": "hello@happypaws.org",
+    "email": "hello@@happypaws.org",
     "phone": "+1 (234) 567-890",
     "address": "123 Animal Street<br>City, State 12345",
     "followUs": "Follow us"
