--- a/frontend/src/i18n/pl.json
+++ b/frontend/src/i18n/pl.json
@@ -167,7 +167,7 @@
     }
   },
   "contact": {
-    "email": "hello@happypaws.org",
+    "email": "hello@@happypaws.org",
     "phone": "+48 123 456 789",
     "address": "ul. Zwierzęca 123<br>00-001 Miasto",
     "followUs": "Śledź nas"
