Update contact information keys in i18n files, change 'contact' to 'contactInfo' in en.json and pl.json, modify Home.vue to reflect new keys

--- a/frontend/src/i18n/en.json
+++ b/frontend/src/i18n/en.json
@@ -867,11 +867,10 @@
     "noTasksFound": "No tasks found",
     "noDocumentsFound": "No documents found"
   },
-  "contact": {
-    "email": "hello@@happypaws.org",
-    "phone": "+1 (234) 567-890",
-    "address": "123 Animal Street<br>City, State 12345",
-    "followUs": "Follow us"
+  "contactInfo": {
+    "email": "Email",
+    "phone": "Phone",
+    "address": "Address"
   },
   "contacts": {
     "title": "Relationships",
